# tensoract

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: strang_splitting.py
examples/: dissipative_bh.py  dissipative_heisenberg.py  dissipative_tfi.py  dynamical.py  new.ipynb  newb.ipynb  qubit_cavity.py
tensoract/: __init__.py
tensoract/core/: __init__.py  lptn.py  mpo.py  mps.py  operations.py  projection.py
tensoract/models/: __init__.py  base_model.py  boson_chains.py  spin_chains.py
tensoract/solvers/: __init__.py  evolution.py  fast_disent.py  optimizer.py
tests/: boson_chains_test.py  evolution_test.py  lptn_test.py  mpo_test.py  mps_test.py  operations_test.py  projection_test.py  spin_chains_test.py
