[project]
name = "tensoract"
version = "0.1.0"
description = "1D open quantum system simulation using tensor networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "qutip>=5.2.0",
    # example-only dependencies
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tensoract"
module-root = ""
